----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-06-11 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_export.php: bug #1169791, exporting results from queries
      with limit keyword
    * lang/mongolian* update, thanks to Bayarsaikhan Enkhtaivan 
    * lang/finnish: update, thanks to Jouni Kahkonen
    * lang/norwegian: Update, thanks to Sven-Erik Andersen
    * lang/galician: Updates, thanks to Xosé Calvo.
    * lang/belarusian, libraries/select_lang.lib.php:
      belarusian is now belarusian_cyrillic; added belarusian_latin,
      thanks to Jaska Zedlik

2005-06-08 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1216901, missing backquotes on the Browse
      feature in case of duplicate entry

2005-06-07 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/tatarish*: updates, thanks to Albert Fazlí
    * config.inc.php: bug #1215950, typo in comment

2005-06-06 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/tatarish*, /sync_lang.sh, libraries/select_lang.lib.php,
      translators.html: renamed "tatar" to "tatarish" (tatar is
      a different language and this translation is really tatarish)
    * lang/mongolian*, libraries/select_lang.lib.php,
      translators.html, Documentation.html, README:
      new language (mongolian), thanks to Bayarsaikhan Enkhtaivan 

2005-06-05 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/functions.js: bug #1207405, invalid SQL when creating
      table with zero fields
    * sql.php: bug #1204951, left frame browse icon alt tag 
      not updated on emptying table

2005-06-05 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.

2005-06-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/chinese_traditional: Updates, thanks to Siu Sun.
    * lang/finnish: update, thanks to Jouni Kahkonen
    * lang/norwegian: Update, thanks to Sven-Erik Andersen